closure: guard against non-js thread when marshalling

In libraries like GST a signal such as "new-sample" is emitted from the streaming thread.

If we connect to signals like these GJS currently crashes in spidermonkey code because we are calling  JSAPI from a completely different thread. Since JS should only be touched from the owner thread guard against this behaviour.

Fixes https://gitlab.gnome.org/GNOME/gjs/-/issues/557