installed-tests/js/testGObject.js
@@ -6,7 +6,7 @@
 // except for the class machinery, interface machinery, and GObject.ParamSpec,
 // which are big enough to get their own files.
 
-const {GLib, GObject} = imports.gi;
+const {GLib, GObject, GjsTestTools} = imports.gi;
 const {system: System} = imports;
 
 const TestObj = GObject.registerClass({
@@ -50,6 +50,16 @@ describe('GObject overrides', function () {
             handler.calls.reset();
             GObject.signal_emit_by_name(o, 'test');
             expect(handler).not.toHaveBeenCalled();
+        });
+
+        it('guards against signal emission on non-js thread', function () {
+            handler.calls.reset();
+            GObject.signal_connect(o, 'test', handler);
+            GLib.test_expect_message('Gjs', GLib.LogLevelFlags.LEVEL_CRITICAL, 'Attempting to call back into JSAPI on a different thread.*The offending signal was test on Gjs_TestObj*');
+            GjsTestTools.emit_test_signal_other_thread(o);
+            expect(handler).not.toHaveBeenCalled();
+            GLib.test_assert_expected_messages_internal('Gjs', 'testGObject.js', 0,
+                'testSignalEmissionOtherThread');
         });
     });
 
